    used when the result is truncated to 32 bits.
  * VALUES declaration is partially enabled.
  * fixes in SB-GROVEL (thanks to Andreas Fuchs)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** The system now obeys the constraint imposed by
       UPGRADED-ARRAY-ELEMENT-TYPE that the upgraded array element
       types form a lattice under type intersection.
    ** FFLOOR, FTRUNCATE, FCEILING and FROUND work with integers.
    ** ASSOC now ignores NIL elements in an alist.
    ** CEILING now gives the right answer with MOST-NEGATIVE-FIXNUM
       and (1+ MOST-POSITIVE-FIXNUM) answers.
    ** The addition of a method with invalid qualifiers to a generic
       function does not cause an error to be signalled immediately;
       a warning is signalled, and the error is generated only on
       calling the generic function.
  * changed .fasl file version number, in part to add type codes for
    new array subtypes UNSIGNED-BYTE 7, 15, 29, and 31 mandated by 
    obscure ANSI requirements

changes in sbcl-0.8.4 relative to sbcl-0.8.3:
  * fixed compiler performance when processing loops with a step >1;

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.