@@ -2003,6 +2003,9 @@ changes in sbcl-0.8.3 relative to sbcl-0.8.2:
 
 changes in sbcl-0.8.4 relative to sbcl-0.8.3:
   * fixed compiler performance when processing loops with a step >1;
+  * optimization: restored some effective method precomputation
+    (turned off by an ANSI fix in sbcl-0.8.3); the amount of
+    precomputation is now tunable.
 
 planned incompatible changes in 0.8.x:
   * (not done yet, but planned:) When the profiling interface settles
